Fixed menu items desktop z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -121,6 +121,7 @@
     
     ul {
       position: initial;
+      z-index: 0;
       display: flex;
     }
 
